--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(PasswordManager C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(password_manager main.c)
+add_executable(password_manager main1.c)
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(password_manager OpenSSL::Crypto)
